fixed nav bar adding shift

--- a/Menubar.css
+++ b/Menubar.css
@@ -1,3 +1,5 @@
+@import url('Navigation_Bar.css');
+
 /*font family from online source*/
 
 @font-face {
@@ -31,102 +33,15 @@ body {
     border-radius: 60px;
 }
 
-#Navigation li {
-    list-style: none;
-    display: block;
-    float: left;
-    margin: 1em;
-}
-
-#Navigation2 li {
-    list-style: none;
-    display: block;
-    float: right;
-    margin: 1em;
-}
-
-#Navigation2 li {
-    list-style: none;
-    display: block;
-    float: right;
-    margin: 1em;
-}
-
-#Navigation li a {
-    display: block;
-    text-decoration: none;
-    color: rgb(77, 217, 193);
-    font-size: 42px;
-    margin-left: -20px;
-    padding-right: 20px;
-}
-
-#Navigation2 li a {
-    text-decoration: none;
-    color: rgb(77, 217, 193);
-    font-size: 42px;
-}
-
 #Logo {
-    width: 50%;
-    height: 75%;
     position: absolute;
-    margin-left: 35%;
-    margin-top: -15%;
+    margin-left: -3%;
+    margin-top: -10%;
+    z-index: 2;
 }
 
 header {
-    height: 30%;
+    height: 50%;
     width: 90%;
     margin: 0 auto;
-}
-
-nav {
-    background-color: #e5592e;
-    height: 5em;
-    position: relative;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.55);
-    border-radius: 0.25em;
-    margin: 3em;
-    z-index: -2;
-}
-
-header:before {
-    content: " ";
-    border-color: #d9542b #d9542b #d9542b transparent;
-    border-style: solid;
-    border-width: 35px;
-    height: 0px;
-    width: 0px;
-    position: relative;
-    float: left;
-    top: 5px;
-    z-index: -2;
-}
-
-header:after {
-    content: " ";
-    border-color: #d9542b transparent #d9542b #d9542b;
-    border-style: solid;
-    border-width: 35px;
-    height: 0px;
-    width: 0px;
-    position: relative;
-    float: right;
-    top: -124px;
-    z-index: -4;
-}
-
-header nav ul li a:hover {
-    -webkit-transform: rotate(-10deg) scale(1.2);
-    -moz-transform: rotate(-10deg) scale(1.2);
-    -o-transform: rotate(-10deg) scale(1.2);
-    color: #6e626e;
-}
-
-nav.Right_Rotation:hover {
-    -webkit-transform: rotate(10deg) scale(1.2);
-    -moz-transform: rotate(10deg) scale(1.2);
-    -o-transform: rotate(10deg) scale(1.2);
-    color: #ff5050;
 }
